--- a/AdvancedModdingStation/AdvancedModdingStation.csproj
+++ b/AdvancedModdingStation/AdvancedModdingStation.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -31,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="libMBIN">
@@ -67,6 +69,7 @@
       <DependentUpon>ConfigForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CreateXmlEditor.cs" />
+    <Compile Include="ErrorMessages.cs" />
     <Compile Include="EventHandlers.cs" />
     <Compile Include="FileOperations.cs" />
     <Compile Include="MainForm.cs">
